--- a/03_js-output/innerhtml.html
+++ b/03_js-output/innerhtml.html
@@ -6,6 +6,7 @@
     <style>
       code {
         background-color: #eee;
+        color: red;
         border-radius: 3px;
         font-family: courier, monospace;
         padding: 0 3px;
